add base function
Signed-off-by: tomoya.kimura <tomoya.kimura@tier4.jp>

--- a/planning/adaptive_cruise_controller/CMakeLists.txt
+++ b/planning/adaptive_cruise_controller/CMakeLists.txt
@@ -20,6 +20,7 @@ find_package(PCL REQUIRED)
 ament_auto_add_library(adaptive_cruise_controller SHARED
   src/debug_marker.cpp
   src/adaptive_cruise_control.cpp
+  src/adaptive_cruise_pid_controller.cpp
 )
 
 target_include_directories(adaptive_cruise_controller
