--- a/planning/adaptive_cruise_controller/config/adaptive_cruise_control.param.yaml
+++ b/planning/adaptive_cruise_controller/config/adaptive_cruise_control.param.yaml
@@ -1,4 +1,4 @@
 /**:
   ros__parameters:
-    adaptive_cruise_object_velocity: 3.0 # if object velocity is higher than this value, the mode changes from STOP to ACC
-    stop_object_velocity: 2.0 # if object velocity is lower than this value, the mode changes from ACC to STOP
+    object_low_velocity_thresh: 3.0 # if object velocity is lower than this value, adaptive cruise becomes disable.
+    object_velocity_hysteresis_margin: 1.0 # hysteresis margin to change acc state for preventing chattering
