--- a/planning/adaptive_cruise_controller/CMakeLists.txt
+++ b/planning/adaptive_cruise_controller/CMakeLists.txt
@@ -18,9 +18,10 @@ find_package(OpenCV REQUIRED)
 find_package(PCL REQUIRED)
 
 ament_auto_add_library(adaptive_cruise_controller SHARED
-  src/debug_marker.cpp
   src/adaptive_cruise_control.cpp
   src/adaptive_cruise_pid_controller.cpp
+  src/debug_marker.cpp
+  src/utilities.cpp
 )
 
 target_include_directories(adaptive_cruise_controller
