add parameter to yaml

--- a/planning/adaptive_cruise_controller/config/adaptive_cruise_control.param.yaml
+++ b/planning/adaptive_cruise_controller/config/adaptive_cruise_control.param.yaml
@@ -1,4 +1,23 @@
 /**:
   ros__parameters:
+    decimate_step_length: 1.0
+    trajectory_extend_length: 5.0
+    rough_detection_area_expand_length: 3.0
+    detection_area_expand_length: 0.0
+    object_threshold_angle: 0.523
+    predicted_path_threshold_angle: 0.523
+    mininum_overlap_time_of_predicted_path: 1.0
+
+
+
     object_low_velocity_thresh: 3.0 # if object velocity is lower than this value, adaptive cruise becomes disable.
     object_velocity_hysteresis_margin: 1.0 # hysteresis margin to change acc state for preventing chattering
+    reset_time_to_acc_state: 1.0
+    acc_min_acceleration: -1.5
+    acc_min_jerk: -1.0
+    stop_min_acceleration: -3.0
+    object_min_acceleration: -3.0
+    minimum_margin_distance: 5.0
+    idling_time: 1.0
+    breaking_delay_time: 0.5
+    p_term_in_velocity_pid: 0.3
