add acceleration function and fix bug

--- a/planning/adaptive_cruise_controller/config/adaptive_cruise_control.param.yaml
+++ b/planning/adaptive_cruise_controller/config/adaptive_cruise_control.param.yaml
@@ -14,6 +14,7 @@
     object_stop_velocity_thresh: 1.0 # if object velocity is lower than this value, ignore the sign of object orientation
     object_velocity_hysteresis_margin: 1.0 # hysteresis margin to change acc state for preventing chattering
     reset_time_to_acc_state: 1.0
+    velocity_to_accleration_weight: 0.3 # target accleration is calculated by (target_velocity - current_velocity) * velocity_to_accleration_weight
     acc_min_acceleration: -1.5
     acc_min_jerk: -1.0
     stop_min_acceleration: -3.0
