--- a/.github/workflows/sync-upstream.yaml
+++ b/.github/workflows/sync-upstream.yaml
@@ -11,8 +11,8 @@ jobs:
         id: generate-token
         uses: tibdex/github-app-token@v1
         with:
-          app_id: ${{ secrets.APP_ID }}
-          private_key: ${{ secrets.PRIVATE_KEY }}
+          app_id: x
+          private_key: x
 
       - name: Print warning for invalid branch name
        if: ${{ github.event.inputs.target_branch  == 'tier4/main' }}
